--- a/styles.css
+++ b/styles.css
@@ -8,11 +8,11 @@ h1 {
 }
 /* REMEMBER TO RESIZE JOHN AT THE END SO HE LOOKS PERFECT!!!!!!*/
 .mainBackground {
-    background-image:url(johnwick4.jpg);
+    background-image:url(images/johnwick4.jpg);
     background-repeat:no-repeat;
     background-position:right;
-    background-size:45% 100%;
-    margin-right:2.5em;
+    background-size:550px 800px;
+    margin-right:2em;
 }
 
 .desc {
@@ -27,7 +27,7 @@ dt {
 }
 
 .tableScene {
-    background-image:url(johnhasgun.jpg);
+    background-image:url(images/johnhasgun.jpg);
     background-repeat:no-repeat;
     height:300px;
     background-size:100% 100%;
