--- a/styles.css
+++ b/styles.css
@@ -1,29 +1,34 @@
 body {
     font-family:Georgia, 'Times New Roman', serif;
     margin:1em 1em 1em 2em;
+    background: linear-gradient(#67666d, #4d4e8a, #c28529);
 }
 
 h1 {
+    font-family:Verdana, Arial, sans-serif;
     text-align:center;
+    font-weight:bold;
+
 }
-/* REMEMBER TO RESIZE JOHN AT THE END SO HE LOOKS PERFECT!!!!!!*/
-.mainBackground {
+
+.cover {
+    height:500px;
     background-image:url(johnwick4.jpg);
     background-repeat:no-repeat;
-    background-position:right;
-    background-size:550px 800px;
-    margin-right:2em;
+    background-position:center;
+    background-size:auto 100%;
+    margin:1em;
 }
 
 .desc {
     text-align:left;
     line-height:125%;
-    width:45%;
     font-size:19px;
 }
 
 dt {
     font-weight:bold;
+    line-height:1.5em;
 }
 
 .tableScene {
@@ -40,13 +45,43 @@ nav {
 
 nav a {
     text-decoration:none;
+    font-style:normal;
+    font-size:medium;
+    color:#fcaa67;
+}
+
+footer a {
+    text-decoration:none;
+    font-style:normal;
+    font-size:medium;
+    color:#fcaa67;
 }
 
 h3 {
     text-align:center;
 }
 
-footer p{
+p {
+    line-height:150%;
+}
+
+footer {
+    font-weight:bold;
     font-style:italic;
     font-size:small;
+    color:gray;
+    text-align:center;
+}
+
+.linktowicks {
+    color:#fcaa67;
+}
+
+.content {
+    width:95%;
+    box-shadow:3px 3px 3px #473335;
+    color:#ffffc7;
+    background-color:#473335;
+    margin:auto;
+    padding:2em;
 }
